errorsof-nodeman
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
  File "/home/redman/nodeman-massa/nodeman.py", line 1
    print(qwe')
             ^
SyntaxError: unterminated string literal (detected at line 1)
